added templateData model

--- a/webapp/templates/about.page.html
+++ b/webapp/templates/about.page.html
@@ -6,6 +6,7 @@
 <div> there is nothing in the about page</div>
 <div> new content added on oct 15</div>
 <div> more content</div>
-
+<div> this came from the template {{index .StringMap "test"}}</div>
+<div> this came from the template {{index .StringMap "bye"}}</div>
 
 {{end}}
